apps/site/web/static/css/_schedule.scss
@import 'variables';
$holiday-color: #dcd3e8;

.schedule-route-name-container {
  padding-bottom: 1rem;
}

.form-control.schedule-route-selector {
  // leave room for the route icon
  max-width: 80%;
  float: left;
}

.schedule-separator {
  font-weight: 300;
}

.schedule-direction {
  margin-bottom: .5em;
  @include media-breakpoint-up(sm) {
    // better aligned with the route selector
    margin-top: -5px;
  }
  @include media-breakpoint-down(xs) {
    margin-top: -1em;
  }
}

.schedule-callout {
  background-color: $gray-lightest;
  border-radius: 0;
  margin-bottom: .75rem;
  padding: .5em;

  @include media-breakpoint-down(xs) {
    margin: .5em auto;
    font-size: $font-size-sm;

    button {
      font-size: $font-size-sm;
    }
  }

  button {
    line-height: 1;
    padding: 0;
  }
}

.schedule-block {
  padding-top: $space-12;
}

.schedule-list-group {
  //scss-lint:disable PlaceholderInExtend
  @extend .list-group;
}

.schedule-list-group-item {
  //scss-lint:disable PlaceholderInExtend
  @extend .list-group-item;
  @include clearfix;
  display: block;
  // left/right padding is reduced to account for the column padding
  padding: .5rem (.5rem - $grid-gutter-width / 2);

  &:first-child {
    border-radius: 0;
  }
}

.schedule-list-group-header {
  background-color: $brand-primary-darkest;
  border-color: $brand-primary-darkest;
  color: $white;
  font-weight: bold;

  a {
    color: $white;

    @include hover-focus-active {
      color: $white;
    }
  }
}

%schedule-col {
  float: left;
  padding-left: $grid-gutter-width / 2;
  padding-right: $grid-gutter-width / 2;

  &.pull-right {
    float: right;
  }
}

.schedule-col-1 {
  @extend %schedule-col;
  width: 100% * (1 / 12);
}

.schedule-col-departure,
.schedule-col-arrival {
  @extend %schedule-col;
  width: 100% * (4 / 12);

  @include media-breakpoint-up(sm) {
    width: 100% * (3 / 12);
  }

  @include media-breakpoint-up(md) {
    width: 100% * (2 / 12);
  }
}

.schedule-col-departure {
  .fa-exclamation-triangle {
    color: $gray-dark;
  }
}

.schedule-col-departure-subway {
  @extend %schedule-col;
  width: 100% * (6 / 12);

  @include media-breakpoint-up(md) {
    width: 100% * (3 / 12);
  }
}

.schedule-col-pair-notes {
  @extend %schedule-col;
  width: 100% * (3 / 12);

  @include media-breakpoint-up(sm) {
    width: 100% * (5 / 12);
  }

  @include media-breakpoint-up(md) {
    width: 100% * (7 / 12);
  }
}

.schedule-col-group {
  @extend %schedule-col;
  width: 100% * (7 / 12);

  @include media-breakpoint-up(md) {
    width: 100% * (8 / 12);
  }

  @include media-breakpoint-up(md) {
    width: 100% * (9 / 12);
  }
}

.schedule-col-group-subway {
  @extend %schedule-col;
  width: 100% * (5 / 12);

  @include media-breakpoint-up(md) {
    width: 100% * (7 / 12);
  }
}

.schedule-time {
  color: $link-color;
}

.bus-schedule-time {
  display: inline-block;
  width: 3.1rem;

  @include media-breakpoint-up(md) {
    width: 4rem;
  }
}

a {
  &.schedule-list-group-item {
    @include hover-focus-active {
      background-color: $brand-primary-lightest;
      border-color: $brand-primary-lightest;
    }
  }

  &.selected-period-header {
    background-color: $brand-primary-dark;
    border-color: $brand-primary-dark;
    color: $white;

    .alert-image {
      fill: $white;
    }

    @include hover-focus-active {
      // we override the default and keep the same colors in the hover state.
      // iOS doesn't distinguish between these cases and it looks strange
      // when toggling between schedule groups. -ps
      background-color: $brand-primary-dark;
      border-color: $brand-primary-dark;
      color: $white;

      + .schedule-list-group-item {
        border-color: $brand-primary-dark;
      }
    }

    @media (pointer: fine) {
      // if we have a mouse, use the regular focus colors
      @include hover-focus-active {
        background-color: $brand-primary-lightest;
        border-color: $brand-primary-lightest;

        + .schedule-list-group-item {
          border-color: $brand-primary-lightest;
        }
      }
    }

    .schedule-time {
      color: $white;
    }
  }
}

.selected-period {
  border: 4px solid $brand-primary-dark;
  padding: .5rem;

  @include hover-focus-active {
    outline: none;
  }
}

.green-route-name {
  color: $link-color;
}

.trip-list {
  padding-left: 1.25em;
  margin-bottom: 0;
}

.trip-stop {
  position: relative;
  margin-bottom: 0;
  padding-bottom: $space-1;
  padding-left: .625rem;
  list-style: none;

  &:before {
    content: "";
    position: absolute;
    left: -1 * $space-12;
    border-left: $space-4 solid $brand-primary-dark;
    height: 100%;
    width: $space-1;
  }

  &:first-child:before {
    top: $space-6;
  }
  &:last-child:before {
    height: $space-6;
  }
}

.trip-stop-bubble {
  float: left;
  position: relative;
  left: -2rem;
  margin-right: -2rem;
}

.trip-stop-text {
  display: inline-block;
}

.trip-stop-suffix {
  @include media-breakpoint-down(sm) {
    display: block;
  }
}

.direction-btn-group {
  display: table;
  margin-bottom: .5rem;
  width: 100%;
}

// needs .btn to be specific enough to have the float overridden -ps
.btn.direction-btn {
  display: table-cell;
  float: none;
  text-align: left;
  vertical-align: top;
  white-space: normal;
  width: 50%;
}

.direction-btn-selected-icon {
  @include pull-left();
  display: block;
  padding-right: .333rem;
}

.direction-btn-label {
  @include pull-left();
  display: block;
}

.direction-btn-label-selected {
  // leave room for the checkbox on the first line
  max-width: 85%;

  @include media-breakpoint-up(sm) {
    max-width: 90%;
  }

  @include media-breakpoint-up(md) {
    max-width: 94%;
  }
}

@include media-breakpoint-up(sm) {
  .row-equal {
    display: table;
    width: calc(100% + #{$grid-gutter-width / 2});
  }

  .col-equal {
    display: table-cell;
    float: none;
    margin-bottom: 0;
  }

  .js .col-equal {
    // without JS, we want both columns to top align
    vertical-align: middle;
  }
}

.col-equal {
  margin-bottom: .5rem;
}

.station-info-link {
  padding-left: .2rem;

  .icon-map {
    position: relative;
    top: -1px;
    width: 1rem;
  }

  .icon-image {
    fill: $white;
    stroke: $brand-primary;
  }
}

.schedule-flag {
  color: $brand-danger;
  font-weight: bold;
}

.schedule-prediction {
  @include media-breakpoint-down(xs) {
    display: block;
  }
}

// scss-lint:disable NestingDepth
// scss-lint:disable SelectorDepth
.schedule-date-picker {
  table-layout: fixed;
  text-align: center;

  @include media-breakpoint-down(xs) {
    table-layout: auto;
  }

  thead {
    td {
      border: 1px solid $gray-lighter;
    }

    .month {
      background-color: $brand-primary-darkest;
      border-color: $brand-primary-darkest;
      color: $white;

      a {
        color: $white;
      }
    }
  }

  a {
    color: $gray;
  }

  tbody {
    border-bottom: 0;

    td {
      border: 1px solid $gray-lighter;
      padding: 0;

      &:first-child {
        background-color: $gray-lightest;
      }

      &:last-child {
        background-color: $gray-lightest;
      }

      a {
        display: block;
        padding: .75rem;
        text-decoration: none;
      }
    }
  }
}

//scss-lint:disable ImportantRule
.schedule-holiday {
  background-color: $holiday-color !important;
}

  //scss-lint:disable ImportantRule
.schedule-today {
  background-color: $brand-primary !important;

  a {
    color: $white;
  }
}

.schedule-next-month {
  a {
    color: $gray-light;
  }
}

.schedule-weekend {
  background-color: $gray-lightest;
}

.holiday-list {
  list-style: none;
  padding-left: 0;

  li {
    margin-top: .75rem;
  }
}

.graph-legend {
  display: inline-block;
  height: 1rem;
  margin-right: .5rem;
  width: 1rem;

  &.holiday {
    background-color: $holiday-color;
  }

  &.weekend {
    background-color: $gray-lightest;
  }
}

.mobile-legend {
  padding-left: .375rem;
}

